@@ -1,4 +1,4 @@
-; $Id: views.info,v 1.7.6.41 2010-10-16 09:06:51 dereine Exp $
+; $Id: views.info,v 1.7.6.42 2010-10-16 15:17:33 dereine Exp $
 name = Views
 description = Create customized lists and queries from your database.
 package = Views
@@ -296,3 +296,4 @@ files[] = tests/views_handlers.test
 files[] = tests/views_pager.test
 files[] = tests/views_query.test
 files[] = tests/views_test.views_default.inc
+files[] = tests/user/views_user_argument_default.test
